# minimg_interfaces

./: README.md  license.txt
minbase/: CMakeLists.txt  changelog.txt  license.txt
minbase/benchmark/: CMakeLists.txt  bench_minbase_typ_to_fmt.cpp
minbase/cmake/: folders.cmake  output_directories.cmake  warning_level.cmake
minbase/doc/: license.txt  minbase.dox
minbase/include/minbase/: crossplat.h  half.hpp  introspection.hpp  magic_switch.hpp  meta_mintyp.hpp  min_pp_mintyp.h  mingeo.h  minimg.h  minmeta.hpp  minpreprocessor.h  minresult.h  minstd.hpp  mintyp.h  warnings.h
minbase/include/minbase/gcc_versions_warnings/: gcc_warnings.h
minbase/src/: mintyp.cpp
minbase/test/: CMakeLists.txt  test_minbase_introspection.cpp  test_minbase_magic_switch.cpp  test_minbase_minimg.cpp  test_minbase_minmeta.cpp  test_minbase_mintyp.cpp
minimgapi/: CMakeLists.txt
minimgapi/include/minimgapi/: allocation.hpp  assures_and_compares.hpp  gets.hpp  imgguard.hpp  minimgapi-helpers.hpp  minimgapi-inl.h  minimgapi.h  minimgapi.hpp  minimgapi_base.hpp  minimgapi_types.h  prototype.hpp  reshape.hpp  wrap.hpp
minimgapi/include/minimgapi/raw/: allocation.hpp  assures_and_compares.hpp  get_coord.hpp  gets.hpp  minimgapi_raw.hpp  minimgapi_raw_base.hpp  prototype.hpp  reshape.hpp  wrap.hpp
minimgapi/include/minimgapi/test/: mincompare.hpp  minrandom.hpp
minimgapi/src/: bitcpy.cpp  bitcpy.h  copy_channels.cpp  minimgapi.cpp  resample.cpp  transpose.cpp
minimgapi/src/vector/: copy_channels-inl.h  transpose-inl.h
minimgapi/src/vector/neon/: copy_channels-inl.h  transpose-inl.h
minimgapi/src/vector/sse/: copy_channels-inl.h  transpose-inl.h
minimgapi/test/: CMakeLists.txt  test_internal_transpose.cpp  test_minimgapi.cpp
minimgio/: CMakeLists.txt
minimgio/benchmark/: CMakeLists.txt  bench_minimgio.cpp
minimgio/include/minimgio/: contrib.h  define.h  device.h  minimgio.h  minimgio.hpp  minimgio_types.h
minimgio/src/: avfoundationdevice.h  avfoundationdevice.mm  avfoundationsubsystem.h  avfoundationsubsystem.mm  avfoundationutils.h  binary_stream.cpp  camstream.cpp  camstream.h  contrib.cpp  device.cpp  dshowdevice.cpp  dshowdevice.h  dshowsubsystem.cpp  dshowsubsystem.h  dshowutils.cpp  dshowutils.h  minimgio.cpp  minimgio_ancient.cpp  minimgiodev_go.cpp  minimgiodevice.cpp  minimgiodevice.h  minimgiojpeg.cpp  minimgiolst.cpp  minimgiopng.cpp  minimgiotiff.cpp  minimgiowebp.cpp  pack.cpp  pack.h  stream.h  subsystem.cpp  subsystem.h  utils.cpp  utils.h  v4l2device.cpp  v4l2device.h  v4l2subsystem.cpp  v4l2subsystem.h  v4l2utils.cpp  v4l2utils.h
minimgio/test/: CMakeLists.txt  common.hpp  quantile_diff.hpp  test_interface.cpp  test_jpeg.cpp  test_png.cpp  test_tiff.cpp  test_webp.cpp
minimgio/test/images/: orientation_1.tif  orientation_2.tif  orientation_3.tif  orientation_4.tif  orientation_5.tif  orientation_6.tif  orientation_7.tif  orientation_8.tif  orientation_YCbCr_1.tif  orientation_YCbCr_2.tif  orientation_YCbCr_3.tif  orientation_YCbCr_4.tif  orientation_YCbCr_5.tif  orientation_YCbCr_6.tif  orientation_YCbCr_7.tif  orientation_YCbCr_8.tif
minimgprc/include/: contrib.h  minimgprc.h
minutils/: CMakeLists.txt
minutils/include/minutils/: mathoper.h  minhelpers.h  smartptr.h
minutils/src/: minutils.cpp
